# profilerDQ

./: .gitignore  LICENSE  README.md  pyproject.toml
db_sample/: sample.db
profiler_dq/: __main__.py  ambientes.py  data_types.py  info_colunas.py
profiler_dq/flavors/: mssql.py  oracle.py  sqlite.py
validacao/: cpfs-nome.sql  cpfs.sql
